--- a/main.tex
+++ b/main.tex
@@ -52,7 +52,7 @@
 
 	\begin{titlepage}
 		\maketitle
-		Character count: 43.982/44.000\\
+		Character count: 43.950/44.000\\
 		\noindent\rule{\linewidth}{0.4pt}
 		\begin{figure}[h]
 			\centering
@@ -64,14 +64,13 @@
 \pagebreak
 
 \begin{abstract}
-\todo[inline]{To come..}
+
+This paper present a modern computational approach to conflict prediction at the sub national level. Using various features from the literature on civil war and internal conflicts and an ensemble of modern boosting algorithms I create a predictive framework. The framework is capable of estimate the probability of conflict across a global grid of cells - with each cell measuring $0.5 \times 0.5$ decimal degrees. The approach shows good potential, but while the framework can successfully captures most conflict zones the price is a large number false positives compared to true positives. More crucial, however, it is not capable of capturing sudden political developments such as ceasefires or identify new onset far removed in time and space from any present or past conflicts. Three recommendations are given pertaining future endeavours; better handling of the imbalanced data, better modeling of temporal/spatial patterns; and the inclusion features derived from large scale text analysis.
+
 \end{abstract}
 \pagebreak
 
 \section{Introduction}
-%\subsection{The 'What'}
-
-% Du har ikke data med fra efter 2010 fordi den igen der bliver for ufuldstændig..
 
 Humans kill humans - a lot of humans. In 2009 an estimated 46,772 people were killed in internal conflicts alone\footnote{according to the best estimate from the Uppsala Conflict Data Program}. The number of lives ruined as a consequence of these killings no doubt exceeds the number of deaths by magnitudes. Even far away from the conflict zones people experiences the consequences of conflict - not least in the form of large influx of refugees and the ensuring political turmoil. The long term solution to this senseless onslaught probably entails some fundamental changes to the global power structures involving the cooperation of the global political, economic and cultural elites alike. However, while we wait for this eventuality to ensue, another, less Utopian approach is be to mitigate the ongoing catastrophe by creating a reliable "early warning system". A predictive framework capable of estimating the probability that a given geographic location will experience conflict during a given time period. Using this information governments, NGOs or other responsive actors can act to prevent the conflict, mitigate the fallout, or secure civilians. Naturally, such interventions are both disruptive and expensive. Thus, for any predictive framework to work as a practical early-warning-system a high level of accuracy is needed; we need to ensure that the geographic locations, which are being appointed the highest risk by the framework, are indeed where future conflicts are most likely to occur.\par
 
@@ -156,7 +155,7 @@ But first, I will briefly highlight some of the main difference between a dedica
 
 Most scholars of political science are familiar with the process of estimating parameters through linear or logistic regression. Often the main concern in these efforts is to ensure that the parameter estimates are unbiased. The endeavour at hand takes a different focus; predicting future events. The framework produces no parameters to evaluate, I do not deal with significance level and I do not overly concern my self with bias. Instead I concern myself mainly with increasing prediction power and preventing "over-fitting". Traditional models for parameter estimates are perfectly capable of making predictions, but these predictions are often rather poor not least do to overfitting \citep{Ward_Greenhill_Bakke_2010}. Overfitting, to put it simply, is the accidental identification of patterns present in the data, yet not present as a phenomenon in the real world \citep[166-168]{Mcelreath_2018}. In quantitative studies of conflicts scholars have often neglected taking steps to counter overfitting leading to bad estimations and possible erroneous conclusions \citep{king_zeng_2001b, Ward_Greenhill_Bakke_2010}.\par
 
-Preventing overfitting is paramount if I am to generate reliable predictions for real world applications. One tool available is using out-of-sample prediction as evaluation approach \citep{king_zeng_2001b, Ward_Greenhill_Bakke_2010, perry_2013, Schrodt_2014}. This simply entails construction the predictive framework on one set of data and testing it on another; a training set and a test set. While out-of-sample predictions can give an honest evaluation and reveal overfitting, other tools are needed to mitigate and prevent the problem in the first place. Some of these I shall return to shortly.\par
+Preventing overfitting is paramount if I am to generate reliable predictions for real world applications. One tool available is using out-of-sample prediction as evaluation approach \citep{king_zeng_2001b, Ward_Greenhill_Bakke_2010, perry_2013, Schrodt_2014}. This simply entails construction the predictive framework on one set of data and testing it on another; a trainingset and a testset. While out-of-sample predictions can give an honest evaluation and reveal overfitting, other tools are needed to mitigate and prevent the problem in the first place. Some of these I shall return to shortly.\par
 
 I use a ratio of roughly 25/75 for respectively test- and trainingset \citep{Friedman_2001, Ward_Greenhill_Bakke_2010}. To mimic the forecasting element of the project I choose the fist years (1990-2005) as the training set and the last years (2006-2010) of the data as the testset \citep{Goldstone_2010}.\par
 
@@ -195,7 +194,7 @@ In the following subsections, I evaluate the predictive capabilities of the fram
 
 \subsection{The Evaluation Metrics}
 
-Many metrics are available, but the most commonly known are probably "accuracy", "Receiver Operating Characteristic" curve and the related measure "Area Under the Curve" (AUC) scores. While accuracy is intuitively meaningful and the ROC/AUC score has been coined as a "gold-standard" \citep[366]{perry_2013}, these measures also have some inherent limitations in regards to the specific problem at hand. Accuracy is not very suited for imbalanced data \citep[1264]{He_2008}. The ROC/AUC score tend to judge performance on highly imbalanced data too favorable \citep[1278]{He_2008}. Going forward, I instead report the two metrics "Recall" and "Precision" along two closely related ratio metrics; the "Recall-Precision Curve" and the "Average Precision Rate". These measures are suitable for imbalanced data; have a substantial and conveyable interpretation; judges the present framework appropriately honest and harshly; and with the ratio metrics we circumvent the problem of a hard threshold \cite[1278]{He_2008}.
+Many metrics are available, but the most commonly known are probably "Accuracy", "Receiver Operating Characteristic" curve and the related measure "Area Under the Curve" (AUC) scores. While accuracy is intuitively meaningful and the ROC/AUC score has been coined as a "gold-standard" \citep[366]{perry_2013}, these measures also have some inherent limitations in regards to the specific problem at hand. Accuracy is not very suited for imbalanced data \citep[1264]{He_2008}. The ROC/AUC score tend to judge performance on highly imbalanced data too favorable \citep[1278]{He_2008}. Going forward, I instead report the two metrics "Recall" and "Precision" along two closely related ratio metrics; the "Precision-Recall Curve" and the "Average Precision Rate". These measures are suitable for imbalanced data; have a substantial and conveyable interpretation; judges the present framework appropriately honest and harshly; and with the ratio metrics we circumvent the problem of a hard threshold \cite[1278]{He_2008}.
 
 Denoting "True Positives" TP, "False Posits" FP and "False Negatives", recall and precision are defined as follows\footnote{All mathematical definitions below are sourced from an article from \cite{He_2008}, but most of them can be found in any standard machine learning text book, such as \cite{Friedman_2001}.}:
 
@@ -209,7 +208,7 @@ recall = \frac{TP}{TP+FN} \tag{3} \label{eq:precision}
 
 As such, both scores are ratios which takes a value between 0 and 1. Intuitively, precision is the ratio between correctly predicted events and all predicted events. It tells us how many of the events we predict actually turns out to be events. Recall is the other side of the coin. It is the ratio between the correctly predicted events and all true events. It denotes how many of the true events our framework actually identifies. As seen in equation \ref{eq:recall} and \ref{eq:precision} above, more false negatives results in a lower recall score. More false positives results in a lower precision score. This is exactly the information needed to accurately evaluate the highly imbalanced data of rare events. Through these metrics we learn how many of the actual rare events we are able to capture, and how many non-events we incorrectly classify as events in the process.\par 
 
-Naturally, deriving false positives and false negatives demands that I binarize the obtained probability according to some hard threshold - which I already deemed imprudent. The predicted probabilities are far more informative \cite{Goldstone_2010}. The solution is a "Precision-Recall Curve". This circumvents the problem by generating the ratio between recall and precision at all possible thresholds. This ratio is then easily conveyed visually as a curve representing the tread-off between recall and precision and any possible thresholds \cite[1278]{He_2008}. Furthermore the curve itself can be summarized by the "Average Precision" (AP) score. This score denotes the weighted mean of the precision achieved at each possible threshold, where the weighting is the increase in recall from the previous threshold. Denoting recall $R$, precision $P$, and the different threshold as $n$ the AP score can be calculated as follows:\par
+Naturally, deriving false positives and false negatives demands that I binarize the obtained probability according to some hard threshold - which I already deemed imprudent. The predicted probabilities are far more informative \citep{Goldstone_2010}. The solution is a "Precision-Recall Curve". This circumvents the problem by generating the ratio between recall and precision at all possible thresholds. This ratio is then easily conveyed visually as a curve representing the tread-off between recall and precision and any possible thresholds \cite[1278]{He_2008}. Furthermore the curve itself can be summarized by the "Average Precision" (AP) score. This score denotes the weighted mean of the precision achieved at each possible threshold, where the weighting is the increase in recall from the previous threshold. Denoting recall $R$, precision $P$, and the different threshold as $n$ the AP score can be calculated as follows:\par
 
 \[
 AP = \sum_n (R_n-R_{n-1})P_n \tag{4} \label{eq:ap}
@@ -237,7 +236,7 @@ The same information presented in \autoref{recall_precision_curve} is conveyed i
     \caption{\footnotesize{Marginal distributions of recall and precision at various thresholds. The point estimate is marked and annoted while the specific threshold is given in the legend. The distributions are based on all 1000 xgboost models. As these sampling distributions can be interpreted as probability distributions the height of these does not convey any other meaning then the certainty pertaining to the estimates.}}\label{threshold_plot}
 \end{figure}
 
-Again, the inverse relationship and the increased variance with higher thresholds, is apparent. Furthermore, this plot gives us some substantial answers. For example; if we where to set a threshold denoting any PRIO grid with a probability of conflict above 10\% as a potential conflict zone, we would correctly identify 77.1\% of next years present conflicts. The trade-of is that these correctly identified events only constitute 27.7\% of the events predicted to have above 10\% risk of conflict. That is; our framework here generates around two false positives for each true positive.\par
+Again, the inverse relationship and the increased variance with higher thresholds, is apparent. Furthermore, this plot gives us some substantial answers. For example; if we where to set a threshold denoting any grid cell with a probability of conflict above 10\% as a potential conflict zone, we would correctly identify 77.1\% of next years present conflicts. The trade-of is that these correctly identified events only constitute 27.7\% of the events predicted to have above 10\% risk of conflict. That is; our framework here generates around two false positives for each true positive.\par
 
 Now, it is worth remembering that the grid cells in question are relatively small and does not correspond to any salient political, cultural or geographical distinction. It is merely squares. The point is, that predicting the exact cell is a hard case, and we can hardly hope to know exactly which of three neighbouring cells with high risk of conflict will actually experience conflict. And even if one experience conflict and the others do not, it does not mean that the risk was not real in all three cells. To illustrate my point \autoref{true_conf} visualizes all conflicts observed in 2007 versus the predicted probabilities for the same year in \autoref{pred_conf_b}.\par
 
@@ -256,11 +255,11 @@ Now, it is worth remembering that the grid cells in question are relatively smal
 
 The maps presented in \autoref{true_conf} and \autoref{pred_conf_b} clearly illustrates the potential of the framework - but also some of its challenges. It is clear to see that the areas deemed most probable of experiencing conflict, were also generally where conflict ensued. Indeed the predicted risk zones encompasses larger areas than the actual conflict zones, but this merely captures the uncertainty inherent in the task.\par
 
-This is the good news. More problematic are the systematic mistakes. Looking at the year 2007 as an illustrative example, the high predicted probability of conflicts throughout Nepal constitutes a clear mistake; there was no conflict deaths in Nepal in 2007. Indeed, there where many conflict deaths from 1996 to 2006 as a result of the Nepalese Civil war \citep{ohchr2012nepal}, but non in 2007. The mistake is a product of hoe I construction of the framework. I ask of my framework to present the probability of conflicts given the features presented earlier and that is what it does. However, none of the included features are able to capture sudden peace agreements or ceasefires - which is exactly what happened on 21th of November 2006 in Nepal \citep{ohchr2012nepal}. The point is, that the framework is insensitive to sudden changes and developments in the political processes surrounding the conflicts and the sentiment among the warring parties. As I will discuss further down, this is crucial insight going forward towards a more accurate framework. However, before we come to that, the following section further explores why the framework is doing well in many instances, but also why it fails in e.g. the Nepalese case. This is done by analyzing which features the framework relies most heavily on generation its predictions.\par
+This is the good news. More problematic are the systematic mistakes. Looking at the year 2007 as an illustrative example, the high predicted probability of conflicts throughout Nepal constitutes a clear mistake; there was no conflict deaths in Nepal in 2007. Indeed, there where many conflict deaths from 1996 to 2006 as a result of the Nepalese Civil war \citep{ohchr2012nepal}, but non in 2007. The mistake is a product of how I constructed the framework. I ask of my framework to present the probability of conflicts given the features presented earlier and that is what it does. However, none of the included features are able to capture sudden peace agreements or ceasefires - which is exactly what happened on 21th of November 2006 in Nepal \citep{ohchr2012nepal}. The point is, that the framework is insensitive to sudden changes and developments in the political processes surrounding the conflicts and the sentiment among the warring parties. As I will discuss further down, this is crucial insight going forward towards a more accurate framework. However, before we come to that, the following section further explores why the framework is doing well in many instances, but also why it fails in e.g. the Nepalese case. This is done by analyzing which features the framework relies most heavily on generation its predictions.\par
 
 \subsection{Feature Importance}
 
-Looking at the top five most important features in \autoref{feature_imp_plot}, four are directly related to present or past conflicts. Furthermore, the feature denoting distance to nearest conflict is by far the most influential predictor. More theoretical features did not contribute with much prediction power once the temporal/spatial pattern was accounted for. Intuitively this might not be surprising, yet the conventional literature does not devote overly much passion to model the pattern of conflict dispersion through time and space. To be sure, the literature does sometimes include measures of temporal/spatial dependency and dispersion, but these measures are often crude, ad hoc and theoretically underdeveloped - in which regard the present endeavour is no different. I shall return to this matter in the discussion of future improvements.\par
+Looking at the top five most important features in \autoref{feature_imp_plot}, four are directly related to present or past conflicts. Furthermore, the feature denoting distance to nearest conflict is by far the most influential predictor. More theoretical features did not contribute with much prediction power once the temporal/spatial patterns was accounted for. Intuitively this might not be surprising, yet the conventional literature does not devote overly much passion to the modelling the pattern of conflict dispersion through time and space. To be sure, the literature does sometimes include measures of temporal/spatial dependency and dispersion, but these measures are often crude and ad hoc - in which regard the present endeavour is no different. I shall return to this matter in the discussion of future improvements.\par
 
 \begin{figure}[!htb]
 	\centering
@@ -283,7 +282,7 @@ An other similar solution would be a "zero-inflated" framework with two or more 
 
 \subsection{A Unified Temporal-Spatial Approach}
 
-Concerning the temporal dimension, most past efforts have included some sort of fixed, random or conditional effects, but also more cleaver modeling of "conflict traps" and "conflict induced grievances" \citep{Collier_Hoeffler_2004, Hegre_Sambanis_2006, Cederman_Gleditsch_Buhaug_2013, perry_2013}. While these efforts are commendable, they all appear as ad hoc solutions. An example is \cite{perry_2013} who propose "time deteriorating index" where one would include the number of fatalities for each of the last ten years as features. The trick is then to down-weigh the fatalities by dividing with the number of years past since the corresponding events. Thus, a feature pertaining to fatalities two years ago will have, as its values, half of the fatalities observed that year\cite[14]{perry_2013}. While the heart is at the right place, it is ad hoc and both methodologically and theoretically underdeveloped. There is no reason to cap the effort at ten years and there is no theoretical or practical reason to choose the suggested deterioration rate. Instead of dividing with years past it might be more appropriate to multiply by 0.8 or 0.4; or the deterioration rate might have an altogether different functional form, like an exponential decay function. The point is that we do not know, and therefor we should estimate the function. Also, estimation at least gives us an indication of how bad our guess is.\par 
+Concerning the temporal dimension, most past efforts have included some sort of fixed, random or conditional effects, but also more cleaver modeling of "conflict traps" and "conflict induced grievances" \citep{Collier_Hoeffler_2004, Hegre_Sambanis_2006, Cederman_Gleditsch_Buhaug_2013, perry_2013}. While these efforts are commendable, they all appear as ad hoc solutions. An example is \cite{perry_2013} who propose "time deteriorating index" where one would include the number of fatalities for each of the last ten years as features. The trick is then to down-weigh the fatalities by dividing with the number of years past since the corresponding events. Thus, a feature pertaining to fatalities two years ago will have, as its values, half of the fatalities observed that year \cite[14]{perry_2013}. While the heart is at the right place, it is ad hoc and both methodologically and theoretically underdeveloped. There is no reason to cap the effort at ten years and there is no theoretical or practical reason to choose the suggested deterioration rate. Instead of dividing with years past it might be more appropriate to multiply by 0.8 or 0.4; or the deterioration rate might have an altogether different functional form, like an exponential decay function. The point is that we do not know, and therefor we should estimate the function. Also, estimation at least gives us an indication of how bad our guess is.\par 
 
 Intriguingly, estimation would also allow different regions, countries or cells to have different rates of conflict deterioration. I shall not go into the technical details here, but the machine learning technique of Gaussian Processes have been used to similar purpose with good results before \citep{Gelman_2013, Mcelreath_2018}. Furthermore Gaussian Processes also facilitates forecasting more readily, without the need to construct specific lags or leads in various features. In such a framework one could decide, post-modeling, whether one wanted estimates for next year, the year after or ten years ahead. Even more, the procedure also estimates the uncertainty which inherently grows as we look into the future.\par
  
@@ -299,7 +298,7 @@ However, while I do believe such approaches holds great promise for future endea
 
 The most simple and straight forward way to know whether some ceasefire is underway, is to know whether or not the warring parties are discussing a ceasefire. And furthermore whether or not the public and political sentiment appears to favour a potential ceasefire. Tools and approaches for large scale automated text analysis gets evermore accessible and powerful and specifically automated text analysis utilized on online news sources have already shown promise in tasks of conflict prediction \citep{chadefaux_2014, mueller_2016}. 
 
-Thus, one could enhance the feature-space with information pertaining to the political or public sentiment in various countries or regions by scraping large amounts of text data from social media, news sources or political outlets. Not only would such features potentially amend the problem exemplified by Nepal 2007; more importantly it could help in predicting onsets in otherwise peacefully areas \cite{mueller_2016}. As such, a framework incorporating analysis of text would bring valuable new information to the prediction effort.\par
+Thus, one could enhance the feature-space with information pertaining to the political or public sentiment in various countries or regions by scraping large amounts of text data from social media, news sources or political outlets. Not only would such features potentially amend the problem exemplified by Nepal 2007; more importantly it could help in predicting onsets in otherwise peacefully areas \citep{mueller_2016}. As such, a framework incorporating analysis of text would bring valuable new information to the prediction effort.\par
 
 The tread-of is naturally that such an effort is vastly more resource demanding than the two other remedies proposed. Never-the-less, \cite{mueller_2016} show one way to do it, and with the pace of the present technological development it is surely not an impossible task.\par 
 
