Fixed irritating typo..

--- a/main.tex
+++ b/main.tex
@@ -65,7 +65,7 @@
 
 \begin{abstract}
 
-This paper present a modern computational approach to conflict prediction at the sub national level. Using various features from the literature on civil war and internal conflicts and an ensemble of modern boosting algorithms I create a predictive framework. The framework is capable of estimate the probability of conflict across a global grid of cells - with each cell measuring $0.5 \times 0.5$ decimal degrees. The approach shows good potential, but while the framework can successfully captures most conflict zones the price is a large number false positives compared to true positives. More crucial, however, it is not capable of capturing sudden political developments such as ceasefires or identify new onset far removed in time and space from any present or past conflicts. Three recommendations are given pertaining future endeavours; better handling of the imbalanced data, better modeling of temporal/spatial patterns; and the inclusion features derived from large scale text analysis.
+This paper present a modern computational approach to conflict prediction at the sub-national level. Using various features from the literature on civil war and internal conflicts and an ensemble of modern boosting algorithms I create a predictive framework. The framework is capable of estimate the probability of conflict across a global grid of cells - with each cell measuring $0.5 \times 0.5$ decimal degrees. The approach shows good potential, but while the framework can successfully captures most conflict zones the price is a large number false positives compared to true positives. More crucial, however, it is not capable of capturing sudden political developments such as ceasefires or identify new onset far removed in time and space from any present or past conflicts. Three recommendations are given pertaining future endeavours; better handling of the imbalanced data, better modeling of temporal/spatial patterns; and the inclusion features derived from large scale text analysis.
 
 \end{abstract}
 \pagebreak
