--- a/main.tex
+++ b/main.tex
@@ -43,7 +43,7 @@
 \rfoot{\thepage}
 \renewcommand{\footrulewidth}{0.8pt}
 
-\title{A Morden Computational Approach to Conflict Prediction}
+\title{A Modern Computational Approach to Conflict Prediction}
 
 \author{Simon Polichinel von der Maase}
 \date{January 2019}
